<?xml version="1.0"?>
<package>
  <name>ohm_tsd_slam</name>
  <version>0.0.0</version>
  <description>The ohm_tsd_slam package provides a 2D SLAM approach for laser scanners. </description>


  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="philipp.koch@th-nuernberg.de">Philipp Koch</maintainer>
  <maintainer email="markus.kuehn@th-nuernberg.de">Markus Kühn</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://wiki.ros.org/ohm_tsd_slam</url>
  <url type="website">http://autonohm.de/</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author >Philipp Koch</author>
  <author >Stefan May</author>
  <author >Markus Kühn</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

   <!-- apt get system dependencies according to https://github.com/ros/rosdistro/blob/master/rosdep/base.yaml -->
  <build_depend>libgsl</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>libxml++-2.6</build_depend>
  <build_depend>lua-dev</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopenni2-dev</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <build_depend>glut</build_depend>
  <build_depend>libann-dev</build_depend>
  <build_depend>libflann-dev</build_depend>

  <!--build_depend>geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend-->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
