<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ohm_tsd_slam</name>
  <version>1.0.0</version>
  <description>The ohm_tsd_slam package provides a 2D SLAM approach for laser scanners.</description>
  <maintainer email="knueppl@gmx.de">Christian Wendt</maintainer>
  <license>TODO: License declaration</license>

  <url type="website">http://wiki.ros.org/ohm_tsd_slam</url>
  <url type="website">http://autonohm.de/</url>
  <author>Stefan May</author>
  <author>Christian Wendt</author>
  <author>Philipp Koch</author>
  <author>Markus Kühn</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
